tests/fixtures/fail/coalesce_result_rhs_mismatch.sc
use std.Result

let main(): i32 = { Result(bool)(i32).Err(false) ?? true }
